# rust-server-test

./: Cargo.toml  Rocket.toml  rustfmt.toml
entity/: Cargo.toml
entity/src/: post.rs
src/: cors.rs  helmet.rs  logger.rs  main.rs  pool.rs
src/db/: device.rs  devices.json  mod.rs  record.rs  records.json
src/page/: index.html
src/routes/: devices.rs  mod.rs  records.rs
