[package]
name = "rust-server"
version = "0.1.0"
authors = ["Hipy Cas <hipycas@gmail.com>"]
edition = "2021"
publish = false

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde_json = { version = "^1" }
entity = { path = "entity" }
migration = { path = "migration" }

# ! Not yet out
# [dependencies.rocket_contrib]
# version = "0.5.0-rc.1"
# features = ["helmet"]
# default-features = false

# [dependencies.serde]
# version = "1"
# features = ["derive"]

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"
